<?xml version="1.0"?>
<package format="2">
  <name>rapidjson_ros</name>
  <version>0.0.1</version>
  <description>The rapidjson_ros package; Wrapping rapidjson lib for Ubuntu 16.04/ROS Xenial</description>

  <maintainer email="balintbe@cs.uni-bremen.de">Ferenc Balint-Benczedi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
