<?xml version="1.0"?>
<package format="2">
  <name>robosherlock</name>
  <version>0.0.0</version>
  <description>The RoboSherlock package</description>

  <maintainer email="balintbe@cs.uni-bremen.de">Ferenc Balint-Benczedi</maintainer>
  <maintainer email="wiedemeyer@cs.uni-bremen.de">Thiemo Wiedemeyer</maintainer>
  <maintainer email="jworch@cs.uni-bremen.de">Jan-Hendirk Worch</maintainer>

  <license>Apacehe 2.0</license>

  <url type="website">https://github.com/robosherlock/robosherlock</url>

  <author email="balintbe@cs.uni-bremen.de">Ferenc Balint-Benczedi</author>
  <author email="wiedemeyer@cs.uni-bremen.de">Thiemo Wiedemeyer</author>
  <author email="jworch@cs.uni-bremen.de">Jan-Hendirk Worch</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy                      </depend>
  <depend>cv_bridge                  </depend>
  <depend>cmake_modules              </depend>
  <depend>resource_retriever 	     </depend>

  <depend>sensor_msgs                </depend>
  <depend>std_msgs                   </depend>
  <depend>std_srvs                   </depend>
  <depend>visualization_msgs         </depend>

  <depend>tf                         </depend>
  <depend>tf_conversions             </depend>
  <depend>image_transport            </depend>
  <depend>image_geometry             </depend>
  <depend>pcl_ros		     </depend>
  <depend>pcl_conversions	     </depend>

  <depend>uimacpp_ros                </depend>
  <depend>robosherlock_msgs          </depend>
  <depend>libmongocxx_ros            </depend>
  
  <depend>rapidjson_ros		     </depend>
  <depend>yaml-cpp                   </depend>
  <depend>swi-prolog		     </depend>
  
  <export>
  </export>
</package>
